--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -1,8 +1,76 @@
 .home-header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0) !important;
+  position: relative;
+  z-index: 99;
 
-  p {
-    color: #FFFFFF;
+  .title {
+    display: flex;
+    flex-direction: column;
+
+    p {
+      color: #FFFFFF;
+      margin: 0 0 0 10px;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: normal;
+    }
+  }
+}
+
+.home-content {
+  img {
+    position: relative;
+    top: -64px;
+    z-index: 1;
+    width: 100%;
+    height: 624px;
+  }
+
+  .text {
+    position: relative;
+    top: -460px;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+
+    p {
+      color: #FFFFFF;
+      text-align: center;
+      padding: 60px 40px;
+      border: 2px solid;
+      width: 710px;
+      font-size: 35px;
+    }
+  }
+
+  .module-business {
+    text-align: center;
+    margin-top: -240px;
+    height: 608px;
+
+    h2 {
+      font-size: 26px;
+    }
+
+    p {
+      line-height: 27px;
+      font-size: 16px;
+      color: #666666;
+      margin: 0;
+    }
+  }
+
+  .module-scenerio {
+    text-align: center;
+    background-color: #FFFFFF;
+    height: 600px;
+    padding-top: 45px;
+
+    h2 {
+      font-size: 26px;
+    }
   }
 }
