--- a/src/views/backStage/Container.scss
+++ b/src/views/backStage/Container.scss
@@ -1,17 +1,30 @@
 .backStage-content {
-  height: calc(100vh);
+  height: 100vh;
 
   .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 24px;
+
+    .trigger {
+      svg {
+        color: #FFFFFF;
+        width: 18px;
+        height: 18px;
+      }
+    }
+
+    h1 {
+      color: #FFFFFF;
+      font-size: 18px;
+    }
 
     div {
       display: flex;
       align-items: center;
 
-      p,
-      h1 {
+      p {
         margin: 0 0 0 10px;
         color: #FFFFFF;
       }
