--- a/src/views/backStage/statistic/index.scss
+++ b/src/views/backStage/statistic/index.scss
@@ -1,6 +1,7 @@
 .backStage-statistic-main {
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
 
   .ant-card-body {
     padding: 20px 0 0 0;
