--- a/src/views/backStage/Container.scss
+++ b/src/views/backStage/Container.scss
@@ -45,3 +45,14 @@
     background: #FFFFFF;
   }
 }
+
+.auto-table {
+  .ant-table-content {
+    height: calc(100vh - 280px) !important;
+    overflow-y: auto;
+  }
+}
+
+.ant-pagination {
+  padding: 10px;
+}
